tests/build/cases/ui_node/delegate_expr_error_incorrect_mut.stderr
error[E0596]: cannot borrow `*child` as mutable, as it is behind a `&` reference
 --> cases/ui_node/delegate_expr_error_incorrect_mut.rs:5:50
  |
5 | #[ui_node(delegate = &self.inner, delegate_mut = &self.inner)]
  |                                                  ^----------
  |                                                  |
  |                                                  `child` is a `&` reference, so the data it refers to cannot be borrowed as mutable
  |                                                  help: consider changing this to be a mutable reference: `&mut self.inner`
