tests/build/cases/ui_node/delegate_expr_error_incorrect_mut.rs
use zero_ui::core::{ui_node, UiNode};
struct NodeNotMut<C> {
    inner: C,
}
#[ui_node(delegate = &self.inner, delegate_mut = &self.inner)]
impl<C: UiNode> UiNode for NodeNotMut<C> {}

fn main() {}
